--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+# Giant files for pages
+pages/
+
+# Apaziguador do neovim
+compile_commands.json
+.cache/
